--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-mark": "^3.0.1",
     "marked": "^4.0.8",
+    "moment": "^2.29.1",
     "parseurl": "^1.3.3",
     "remove": "^0.1.5",
     "ws": "^8.4.0"
