--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["standard"],
+  "extends": ["standard", "standard-jsx"],
   "rules": {
     "react/jsx-key": ["off"],
     "react/jsx-closing-tag-location": ["off"],
