--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "highlight.js": "^11.3.1",
     "hotkeys-js": "^3.8.7",
     "html-entities": "^2.3.2",
+    "linkify-html": "^3.0.4",
+    "linkifyjs": "^3.0.4",
     "markdown-it": "^12.3.0",
     "markdown-it-anchor": "^8.4.1",
     "markdown-it-emoji": "^2.0.0",
@@ -59,7 +61,9 @@
     "marked": "^4.0.8",
     "moment": "^2.29.1",
     "parseurl": "^1.3.3",
+    "reconnectingwebsocket": "^1.0.0",
     "remove": "^0.1.5",
+    "sanitize-html": "^2.6.1",
     "ws": "^8.4.0"
   }
 }
