--- a/.github/workflows/deploy-alwaysdata.yml
+++ b/.github/workflows/deploy-alwaysdata.yml
@@ -15,7 +15,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
-            cd $HOME/tableau
+            cd $HOME/notebook
             git fetch --all
             git reset --hard origin/main
             yarn install --production
