--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "linkify-html": "^3.0.4",
     "linkifyjs": "^3.0.4",
     "markdown-it": "^12.3.0",
+    "markdown-it-abbr": "^1.0.4",
     "markdown-it-anchor": "^8.4.1",
     "markdown-it-emoji": "^2.0.0",
     "markdown-it-footnote": "^3.0.3",
