--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "reconnectingwebsocket": "^1.0.0",
     "remove": "^0.1.5",
     "sanitize-html": "^2.6.1",
-    "ws": "^8.4.0"
+    "ws": "^8.4.0",
+    "yaml": "^1.10.2"
   }
 }
