--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "markdown-it": "^12.3.0",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-anchor": "^8.4.1",
+    "markdown-it-attribution": "^0.1.4",
     "markdown-it-emoji": "^2.0.0",
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-mark": "^3.0.1",
