--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "markdown-it-emoji": "^2.0.0",
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-mark": "^3.0.1",
+    "markdown-toc": "^1.2.0",
     "marked": "^4.0.8",
     "moment": "^2.29.1",
     "parseurl": "^1.3.3",
