--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "reconnectingwebsocket": "^1.0.0",
     "remove": "^0.1.5",
     "sanitize-html": "^2.6.1",
+    "session-file-store": "^1.5.0",
     "ws": "^8.4.0",
     "yaml": "^1.10.2"
   }
